# ifs_tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ifs_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ifs_tools/QC/: QCtestBase.py  README.md  __init__.py  qc_main.py
src/ifs_tools/QC/weave/: __init__.py  cube_qc.py  raw_qc.py
src/ifs_tools/QC/weave/qc_params/: check_detector.yml  check_observation.yml  check_raw.yml
src/ifs_tools/data_readers/weave/: weave_cube.py  weave_raw.py
src/ifs_tools/html_tools/: utils.py
