[project]
name = "ifs_tools"
version = "0.0.1"
authors = [
  { name="Pablo Corcho Caballero", email="corchocaballeropablo@gmail.com" },
]
description = "Utilities to work with IFS data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/PabloCorcho/ifs_tools"
"Bug Tracker" = "https://github.com/PabloCorcho/ifs_tools/issues"
